--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "mocha-multi": "^1.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4",
-    "webpack": "^3.11.0"
+    "react-scripts": "^5.0.0",
+    "webpack": "^5.70.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,7 +32,7 @@
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "mocha": "^5.2.0",
+    "mocha": "^9.2.1",
     "sinon": "^1.17.7"
   }
 }
